Thu Oct  7 17:36:25 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: When CHILDKILLED and so on, Tk.errorCode returns
	  a Fixnum for 2nd element (it's pid) of the return value. 

Thu Oct  7 12:55:04 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_read): should freeze buffer before thread context
	  switch. [ruby-dev:24442]

	* pack.c (pack_unpack): string conversion should at the top of the
	  method.  [ruby-dev:24439]

	* io.c (io_read): buffer should be frozen only after the length
	  check.  [ruby-dev:24440]

Thu Oct  7 02:56:43 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c: use FMODE_APPEND.

Thu Oct  7 01:05:33 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: add Tk.errorInfo and Tk.errorCode

Thu Oct  7 00:08:37 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_s_sysopen): preserve path in the buffer allocated by
	  ALLOCA_N() to prevent modification.  [ruby-dev:24438]

Wed Oct  6 09:21:00 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_mode_flags): preserve append mode flag.
	  [ruby-dev:24436]

	* io.c (rb_io_modenum_mode): do not use external output buffer.

	* string.c (rb_str_justify): differ pointer retrieval to prevent
	  padding string modification.  [ruby-dev:24434]

	* range.c (range_each_func): allow func to terminate loop by
	  returning RANGE_EACH_BREAK.

	* range.c (member_i): use RANGE_EACH_BREAK. [ruby-talk:114959]

Tue Oct  5 09:53:22 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_fopen): mode string copy at the lowest level.

	* io.c (rb_io_flags_mode): requires output buffer no more.  no
	  allocation needed.

	* array.c (rb_ary_index): takes a block to compare items in an
	  array.  [ruby-talk:113069] [Ruby2]

	* array.c (rb_ary_rindex): ditto.

Mon Oct  4 14:03:40 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_file_open_internal, rb_io_reopen): fname might be altered
	  while GC.  [ruby-dev:24408]
