@@ -1,3 +1,9 @@
+Thu Oct  7 23:47:57 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/lib/tk/scrollbar.rb: When 'set' operation, a scrollbar
+	  cannot propagate view port information from the source widget
+	  (that calls 'set') to other assigned widgets. 
+
 Thu Oct  7 17:36:25 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
 
 	* ext/tk/lib/tk.rb: When CHILDKILLED and so on, Tk.errorCode returns
